--- a/package.json
+++ b/package.json
@@ -2,25 +2,28 @@
   "name": "graj",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/index.html",
+  "main": "./docs/index.html",
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --open",
-    "watch": "npx webpack --config ./webpack.config.js --watch",
     "build": "npx webpack --config ./webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "buildApp": "npx webpack --config ./webpack.config.js && npx cap copy && npx cap open android",
+    "watch": "npx webpack --config ./webpack.config.js --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gregorh1/GRAJ.git"
   },
-  "author": "",
+  "author": "grzegorz.hul@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/gregorh1/GRAJ/issues"
   },
   "homepage": "https://github.com/gregorh1/GRAJ#readme",
   "dependencies": {
+    "@capacitor/android": "^2.0.2",
+    "@capacitor/cli": "^2.0.2",
+    "@capacitor/core": "^2.0.2",
     "animejs": "^3.2.0"
   },
   "devDependencies": {
